@@ -527,7 +527,7 @@ Reckless:
       - 0
       - 0
 Scar Ghost:
-  can_be_enemy_override: true
+  can_be_enemy_override: false # reports this doesn't work well
   enabled: false # Gives no XP so should not be in pool
   enmp_index: 999
   model: B_LK110_PHANTOM
@@ -1169,6 +1169,13 @@ Barbossa:
     blacklist_destination:
     - Luxord # report of crash after cutscene
     - Terra # report of crash at cutscene
+  blacklist_destination:
+  - Thresholder # Illuminator spawn loc
+  - The Beast # Illuminator spawn loc
+  - Xigbar # You are put in boxed in space
+  blacklist_source:
+  - Thresholder # report of fight not ending
+  - Larxene # report of fight not ending
   adds:
   - ObjectId: 358 #Illuminator
     name: Illuminator
@@ -1276,6 +1283,9 @@ Blizzard Lord:
   - Terra # Too hard in multi boss fights
   - Armor Xemnas I
   - Armor Xemnas II
+  - Twilight Thorn
+  - Xigbar
+  - Roxas # crashes a lot
   tags:
   - large
   type: boss
@@ -2200,6 +2210,7 @@ Grim Reaper II:
     - Volcano Lord
     - Hades Cups
     - The Beast
+    - Sephiroth # report of fire pillar crash
   blacklist_destination:
   - Dark Thorn # medals get lost on ground
   - Shadow Stalker # medals get lost on ground
@@ -4233,11 +4244,10 @@ The Beast:
   enabled: true
   enmp_index: 0x49
   blacklist_source:
-  - Grim Reaper II
+  - Grim Reaper II # remove once GR2 is phase 3 only
   hp: 100
   level: 99
   limiter: 0
-  msn_replace_allowed: false
   model: P_BB000_BTL
   msn: BB03_MS103
   obj_id: 718
@@ -4558,6 +4568,9 @@ Volcano Lord:
   - Terra # Too hard in multi boss fights
   - Armor Xemnas I
   - Armor Xemnas II
+  - Twilight Thorn
+  - Xigbar
+  - Roxas # crashes a lot
   tags:
   - large
   type: boss
@@ -4615,7 +4628,7 @@ Xaldin:
   model: B_EX130
   msn: BB15_MS203
   obj_id: 997
-  size: 3.63
+  size: 3.83
   program: 82
   room_size: 9.61
   type: boss
@@ -4662,6 +4675,7 @@ Xigbar:
   - Roxas
   - Roxas (Data)
   - Prison Keeper
+  - The Beast
   enabled: true
   tags:
   - organization
