@@ -223,7 +223,7 @@ if __name__ == '__main__':
     # run randomizer.py devgenerate "{\"boss\": \"One to One\", \"enemy\": \"Wild\", \"combine_enemy_sizes\": true}" randomization_only
     # run randomizer.py devgenerate "{\"boss\": \"One to One\", \"data_bosses\": true}"
     # run randomizer.py devgenerate "{\"boss\": \"Wild\", \"cups_bosses\": false, \"data_bosses\": false, \"scale_boss_stats\": true}"
-    # run randomizer.py devgenerate "{\"selected_boss\": \"Final Xemnas\", \"enemy\": \"Wild\"}" randomization_only
+    # run randomizer.py devgenerate "{\"selected_boss\": \"Demyx\"}" randomization_only
     # run randomizer.py devgenerate "{\"selected_enemy\": \"Dancer\"}"
     # run randomizer.py devgenerate "{\"enemy\": \"One to One\", \"combine_enemy_sizes\": true}"
     # run randomizer.py devgenerate "{\"boss\": \"One to One\", \"mickey_rule\": \"all\"}" randomization_only
